# firmware

./: README.md
payload-example/: Makefile  README.md
payload-example/arm7/: Makefile  link.ld
payload-example/arm7/src/: fakestack.S  main.c  start.S
payload-example/arm9/: .gitignore  Makefile  link.ld
payload-example/arm9/data/: conv.sh
payload-example/arm9/src/: main.c  ropchain.S  start.S
payload-example/genimg/: .gitignore  Makefile  genimg.py  hackyelf.py  lzss.c
rp2040/: .gitignore  CMakeLists.txt
rp2040/lib/: hardfault.c  thread.h  thread_base.c  util.c  util.h
rp2040/lib/glitch/: glitch.c  glitch.h  glitch_param.c  glitch_param.h  trigctl.pio
rp2040/lib/spiperi/: spiperi.c  spiperi.h  spiperi.pio
rp2040/lib/stdio/: stdio_uart_dma.c  stdio_uart_dma.h  stdio_usb.h
rp2040/lib/tusb/: reset_interface.c  tusb_comms.c  tusb_comms.h
rp2040/libco/: libco.S  libco.h
rp2040/link/: mmap_c2r_payload.ld  mmap_def_payload.ld
rp2040/src/: info.h  ledctl-pico.c  ledctl-v1.c  ledctl-ws2812.c  ledctl.c  ledctl.h  main.c  pinout.h  thread.c
rp2040/src/boards/: haxboard_common.h  haxboard_generic.h  haxboard_issi.h  haxboard_r1.h  haxboard_r2.h  haxboard_w25.h
rp2040/src/pinout/: itsybitsy.h  pico.h  rev1.h  rev2.h  ws.h  xiao.h
rp2040/src/tusb/: dfu.c  dfu.h  tusb_config.h  usb_descriptors.c
rp2040/src/twlitf/: boothax.c  boothax.h  csmux.c  csmux.h  csmux.pio  glitchitf.c  glitchitf.h  mcenv.c  mcenv.h  spictl.c  spictl.h  spiflash.c  spiflash.h
